# 2-cho-community-fe

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.fe.k8s  GEMINI.md  README.md  admin_dashboard.html  admin_reports.html  detail.html  dm.html  dm_detail.html  dm_list.html  edit.html  edit_profile.html  eslint.config.js  home.html  index.html  login.html  main.py  my-activity.html  nginx.conf  nginx.k8s.conf  nginx.local.conf  notifications.html  package-lock.json  package.json  password.html  playwright.config.js  post_detail.html  post_edit.html  post_list.html  post_write.html  pyproject.toml  report.md  serve.json  server.js  signup.html  tsconfig.json  (+11 more)
css/: base.css  layout.css  style.css  variables.css
html/: admin_dashboard.html  admin_reports.html  detail.html  dm.html  dm_detail.html  dm_list.html  edit.html  edit_profile.html  index.html  login.html  my-activity.html  notifications.html  package_detail.html  package_list.html  package_write.html  password.html  post_detail.html  post_edit.html  post_list.html  post_write.html  signup.html  social_signup.html  user-profile.html  user_edit.html  user_find_account.html  user_login.html  user_password.html  user_signup.html  verify-email.html  wiki_detail.html  wiki_diff.html  wiki_edit.html  wiki_history.html  wiki_list.html  wiki_revision.html  wiki_write.html  write.html
js/: config.js  constants.js  detail.js  edit.js  edit_profile.js  header.js  login.js  main.js  password.js  signup.js  types.d.ts  write.js
specs/: 2026-03-29-react-rebuild-design.md  (+1 more)
src/: App.tsx  main.tsx
(+333 files in other folders)
