[project]
name = "2-cho-community-fe"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.0.0",
    "certifi>=2023.7.22",
    "click>=8.1.0",
    "dnspython>=2.4.0",
    "email-validator>=2.1.0",
    "fastapi>=0.109.0",
    "fastapi-cli>=0.0.1",
    "h11>=0.14.0",
    "httpcore>=1.0.0",
    "httptools>=0.6.0",
    "httpx>=0.26.0",
    "idna>=3.6",
    "Jinja2>=3.1.2",
    "markdown-it-py>=3.0.0",
    "MarkupSafe>=2.1.0",
    "mdurl>=0.1.0",
    "pydantic>=2.5.0",
    "pydantic-extra-types>=2.0.0",
    "pydantic-settings>=2.1.0",
    "pydantic_core>=2.14.0",
    "Pygments>=2.17.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.7",
    "PyYAML>=6.0.1",
    "rich>=13.0.0",
    "shellingham>=1.5.4",
    "starlette>=0.35.0",
    "typer>=0.9.0",
    "typing-inspection>=0.4.0",
    "typing_extensions>=4.9.0",
    "urllib3>=2.1.0",
    "uvicorn>=0.27.0",
    "uvloop>=0.19.0",
    "watchfiles>=0.21.0",
    "websockets>=12.0",
]

[tool.setuptools]
py-modules = ["main"]